# arbgeom_rs

./: Cargo.toml  README.md  index.html
src/: binding_structs.rs  lib.rs  main.rs  shader.wgsl  state.rs
src/manifold/: fourth_dim_shapes.rs  mod.rs  shapes3D.rs  shapes4D.rs  third_dim_shapes.rs
