[package]
name = "arbgeom_rs"
version = "0.1.0"
edition = "2021"

# Following https://sotrh.github.io/learn-wgpu/beginner/tutorial1-window/#more-code

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
bytemuck = { version = "1.12", features = [ "derive" ] }
nalgebra = "0.32.3"
pollster = "0.3"
cfg-if = "1"
num = "0.4.1"
game-loop = { version = "*", features = ["winit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.17", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}